--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,23 @@
-name: Deploy Demo Project to cPanel
+name: Deploy website on push
 
 on:
   push:
     branches:
       - main  # Deploy when changes are pushed to the main branch
+
+jobs:
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v4
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
+        #server: ftp.samkirkland.com
+        server: www.cipher.co.tz
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
+        server_dir: /production.cipher.co.tz/
