--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.2' 
+        extensions: mbstring, intl, bcmath, mysqli
+
+    - name: Run PHPCS for linting
+      run: |
+        vendor/bin/phpcs --standard=PSR12 src/  # Specify your folder (src/) and the coding standard
+      continue-on-error: false
+
+    - name: Run PHPUnit tests
+        run: |
+          vendor/bin/phpunit --configuration phpunit.xml
+      
   web-deploy:
     name: 🎉 Deploy
     needs: web-build
