--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
 
     # Step 4: Install Composer dependencies (including PHPUnit)
     - name: Install Composer dependencies
-      run: composer install --no-progress --prefer-dist
+      # run: composer install --no-progress --prefer-dist
+      run: composer install --no-progress --prefer-dist --verbose
 
     # Step 5: Check PHPUnit installation (optional, just for verification)
     - name: Verify PHPUnit installation
