--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
     # Step 9: Run PHPCS for linting
     - name: Run PHPCS for linting
-      run: vendor/bin/phpcs --version
+      run: vendor/bin/phpcs --standard=PSR12 src/
 
     # Step 10: Set execute permissions for PHPUnit (to ensure it's executable)
     - name: Set execute permissions for PHPUnit
