--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <phpunit bootstrap="vendor/autoload.php">
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>./tests</directory> 
+        <testsuite name="Application Test Suite">
+            <directory>./tests</directory>
         </testsuite>
     </testsuites>
-
-    <coverage processUncoveredFiles="true">
-        <include>
-            <directory suffix=".php"></directory>
-        </include>
-    </coverage>
-
-    <listeners>
-        <listener class="PHPUnit\TextUI\ResultPrinter" file="phpunit-listener.php" />
-    </listeners>
 </phpunit>
