--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Run PHPUnit tests
       run: |
         vendor/bin/phpunit --coverage-html coverage-report
-      continue-on-error: false   # Ensures workflow stops if tests fail
+      # continue-on-error: false   # Ensures workflow stops if tests fail
 
     # Optional: Upload the coverage report to GitHub 
     - name: Upload code coverage report
